content/consul/v2.0.x/content/docs/manage/rate-limit/index.mdx
---
layout: docs
page_title: Agent traffic rate limiting
description: Rate limiting is a set of Consul server agent configurations that you can use to mitigate the risks to Consul servers when clients send excessive requests to Consul resources. 
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-03-31T13:43:36-07:00
last_modified: 2026-04-16T15:22:28.000Z
# END AUTO GENERATED METADATA
---

# Agent traffic rate limiting

This topic provides overview information about the traffic rates limits you can configure for Consul datacenters. 

## Introduction

Configuring rate limits on RPC and gRPC traffic mitigates the risks to Consul servers when client agents or services send excessive read or write requests to Consul resources. A _read_ request is defined as any request that does not modify Consul internal state. A _write_ request is defined as any request that modifies Consul internal state. Configure read and write request limits independently.

## Workflow 

You can set limits on the rate of read and write requests that affect individual servers in the datacenter. You can set limits for all source IP addresses, which enables you to specify a budget for read and write requests to prevent any single source IP from overwhelming the Consul server and negatively affecting the network. Enterprise users can also setup cluster-wide rate limits to be applied in case of intense traffic peak periods to avoid server malfunctions, DoS attacks, and keep your datacenter operational.

The following steps describe the general process for setting global read and write rate limits:

1. Set arbitrary limits to begin understanding the upper boundary of RPC and gRPC loads in your network. Refer to [Initialize rate limit settings](/consul/docs/manage/rate-limit/server-limits/initialize) for additional information.    

1. Monitor the metrics and logs and readjust the initial configurations as necessary. Refer to [Monitor rate limit data](/consul/docs/manage/rate-limit/server-limits/monitor).

1. Define your final operational limits based on your observations. If you are defining server rate limits, refer to [Set server traffic rate limits](/consul/docs/manage/rate-limit/server-limits/server) for additional information. For information about setting limits per source IP address, refer to [Limit traffic rates for a source IP](/consul/docs/manage/rate-limit/source).

1. Define cluster-wide rate limits using lower limits compared to the ones observed in the previous steps to re-gain control over your cluster in case of heavy traffic peaks. For information about setting cluster-wide rate limits, refer to [Set a cluster-wide limit on traffic rates](/consul/docs/manage/rate-limit/source).

<EnterpriseAlert>
Setting limits per source IP and global rate limits requires Consul Enterprise.
</EnterpriseAlert>

### Key differences among different limits

| Feature             | Server config         | Global config entry      | IP limiter                            |
|---------------------|-----------------------|--------------------------|---------------------------------------|
| **Configuration**   | Static (agent config) | Dynamic (config entry)   | Dynamic (config entry)                |
| **Scope**           | per-server            | cluster-wide             | per-IP address                        | 
| **Granularity**     | Read/Write            | Read/Write               | Category specific                     |
| **Enterprise**      | NO                    | YES                      | YES                                   |
| **Runtime update**  | Requires restart      | Hot-reloadable           | Hot-reloadable                        |  
| **Traffic support** | Server and client     | Server and client        | Client only                           |  
| **Precedence**      | 2nd                   | 1st (if `priority=true`) | 3rd (IP global) and 4th (IP category) |

### Precedence and application scenarios

The table shows the precedence applied when considering server configuration limits and global rate limits.

| Server config | global config entry             | applied limit       |
|---------------|---------------------------------|---------------------|
| configured    | None or `config.priority=false` | server config       |
| configured    | `config.priority=true`          | global entry config |
| none          | None or `config.priority=false` | server config       | 
| none          | `config.priority=true`          | global entry config |

### Order of operations

You can define request rate limits in the agent configuration and in the control plane request limit configuration entry. The configuration entry also supports rate limit configurations for Consul resources. Consul performs the following order of operations when determining request rate limits:

![Flowchart that describes the order of operations for determining request rate limits.](/img/agent-rate-limiting-ops-order.jpg#light-theme-only)
![Flowchart that describes the order of operations for determining request rate limits.](/img/agent-rate-limiting-ops-order-dark.jpg#dark-theme-only)

<!--
1. Parse request.
1. Does the request reach a global server limit?
   - No: Proceed to the next stage.
   - Yes: Return an error that the requested resource has been exhausted.
1. Does the request reach a limit associated with its source IP address?
   - No: Proceed to the next stage.
   - Yes: Return an error that the requested resource has been exhausted.
1. Resolve the Consul Enterprise metadata.
1. Does the request reach a limit associated with the source partition?
   - No: Proceed to the next stage.
   - Yes: Return an error that the requested resource has been exhausted.
1. Does the request reach a limit associated with the source namespace?
   - No: Proceed to the next stage.
   - Yes: Return an error that the requested resource has been exhausted.
1. Resolve the ACL identity associated with the request.
1. Does the request reach a limit associated with its identity?
   - No: Proceed to the next stage.
   - Yes: Return an error that the requested resource has been exhausted.
1. Handle the request.
-->

## Kubernetes

To define server rate limits, configure the `request_limits` settings in the Consul Helm chart. Refer to the [Helm chart reference](/consul/docs/reference/k8s/helm) for additional information. Refer to the [control plane request limit configuration entry reference](/consul/docs/reference/config-entry/control-plane-request-limit) for information about applying a CRD for limiting traffic rates from source IPs. refer to [global rate limit configuration entry reference](/consul/docs/reference/config-entry/rate-limit) for information about applying a CRD for limiting traffic rates cluster-wide.
